--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Actor&family=Salsa&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <!-- favicon -->
+    <title>Mushroom Quiz</title>
 </head>
+
 <body>
-    
-    <script src="assets/js/script.js"></script>
+    <!-- Header -->
+    <header>
+        <h1 class="heading">Mushroom Quiz</h1>
+    </header>
+
+    <main>
+        <!-- Info Box -->
+        <div class="info-box">
+            <div class="info-title"></div>
+            <span>Rules for this Quiz</span>
+            <div class="info-list">
+                <div class="info">1.</div>
+                <div class="info">2.</div>
+                <div class="info">3.</div>
+                <div class="info">4.</div>
+                <div class="info">5.</div>
+            </div>
+            <!-- Start Quiz Button -->
+            <button class="start-btn">Start Quiz</button>
+        </div>
+
+
+    <!-- Game-area section
+        <div class="game-container">
+        <div class="timer-area">
+
+        </div>
+        <div class="question-area" id="question">Question here!</div>
+        <div id="answer-btn-area">
+        <button class="answer-btn"></button>
+        <button class="answer-btn"></button>
+        <button class="answer-btn"></button>
+        <button class="answer-btn"></button>
+        </div>
+        <button class="next-question-btn" id="next-btn">Next</button>
+
+        Score Area
+        <div class="score-area">
+
+        </div>
+    </div> -->
+
+        <script src="assets/js/script.js"></script>
 </body>
+
 </html>
