--- a/index.html
+++ b/index.html
@@ -36,25 +36,26 @@
         </div>
 
 
-    <!-- Game-area section
+        <!-- Game-area section -->
         <div class="game-container">
-        <div class="timer-area">
+            <div class="timer-area">
 
-        </div>
-        <div class="question-area" id="question">Question here!</div>
-        <div id="answer-btn-area">
-        <button class="answer-btn"></button>
-        <button class="answer-btn"></button>
-        <button class="answer-btn"></button>
-        <button class="answer-btn"></button>
-        </div>
-        <button class="next-question-btn" id="next-btn">Next</button>
+            </div>
+            <div class="question-area" id="question">Question here!</div>
+            <div id="answer-btn-area">
+                <button class="answer-btn">A.</button>
+                <button class="answer-btn">B.</button>
+                <button class="answer-btn">C.</button>
+                <button class="answer-btn">D.</button>
+            </div>
+            <button class="next-question-btn" id="next-btn">Next</button>
 
-        Score Area
-        <div class="score-area">
-
+            <!-- Score Area -->
+            <div class="score-area">
+                <p class="scores">Correct Answers <span id="score">0</span></p>
+                <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+            </div>
         </div>
-    </div> -->
 
         <script src="assets/js/script.js"></script>
 </body>
