--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <div class="username-title">
     <p>Join the fun! <br>Create a username and compete on our Leaderboard!</p>
     </div>
-    <input type="text" name="name" placeholder="Enter Username" id="username-input">
-        <button type="submit" name="submit" value="submit" id="submit-btn">Lets Go!</button>
+    <input id="username-input" type="text" name="name" placeholder="Enter Username" autocomplete="username">
+        <button onclick="returnText()" id="submit-btn" type="submit" name="submit" value="submit">Lets Go!</button>
   </form>
 </div>
 
